--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">E-Commerce</string>
     <string name="link">Already have an account? Click <a href="">here</a> </string>
+    <string name="myaccount">My Account</string>
 </resources>
