made questions UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">E-Commerce</string>
     <string name="link">Already have an account? Click <a href="">here</a> </string>
     <string name="myaccount">My Account</string>
+    <string name="title_activity_wishlist">Wishlist</string>
 </resources>
